--- a/app/src/main/res/layout/jee_advance_template.xml
+++ b/app/src/main/res/layout/jee_advance_template.xml
@@ -462,7 +462,7 @@
                             android:layout_height="wrap_content"
                             android:background="@drawable/button_bg_cancel"
                             android:hint="Answer"
-                            android:inputType="numberDecimal|numberSigned"
+                            android:inputType="number|numberDecimal|numberSigned"
                             android:padding="8dp" />
                     </LinearLayout>
 
@@ -482,7 +482,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="0.5dp"
                     android:layout_marginBottom="@dimen/_5sdp"
-
                     android:background="@android:color/black" />
 
                 <LinearLayout
